# rust-by-example

./: LICENSE
1_HelloWorld/: README.md
1_HelloWorld/Debug/: Cargo.toml
1_HelloWorld/Formatting/: Cargo.toml
2_Primitives/: README.MD
HelloWorld/: README.md
HelloWorld/src/: main
RustByExample/: Cargo.toml
axium_askama/todo/: Cargo.toml
axium_askama/todo/migrations/: 20251224094730_create_users_table.sql  20251224183505_create_todo_table.sql
axium_askama/todo/src/: init.rs  lib.rs  main.rs  middlewares.rs  routes.rs
axium_askama/todo/src/data/: errors.rs  mod.rs  todo.rs  user.rs
axium_askama/todo/src/handlers/: auth.rs  errors.rs  functions.rs  helpers.rs  macros.rs  mod.rs  public.rs  todos.rs
axium_askama/todo/src/models/: app.rs  mod.rs  templates.rs  todo_form_model.rs  user_form_model.rs
axium_askama/todo/static/css/: global.css
axium_askama/todo/templates/: index.html
axium_askama/todo/templates/pages/: create.html  error-layout.html  home.html  log-in.html  not-found.html  server-error.html  sign-up.html  todos.html
axium_askama/todo/templates/partials/: flash.html  pagination.html
exercises/1_variables/: Cargo.toml
exercises/A_variables/: Cargo.toml
exercises/B_functions/: Cargo.toml
exercises/C_modules/: Cargo.toml
exercises/D_simple_types/: Cargo.toml
exercises/a_variables/: Cargo.toml
exercises/b_functions/: Cargo.toml
exercises/e_control_flow/: Cargo.toml
exercises/f_strings/: Cargo.toml
exercises/g_ownership_references/: Cargo.toml
exercises/h_structs/: Cargo.toml
exercises/i_traits/: Cargo.toml
(+82 files in other folders)
